--- a/DXApplication1/Properties/Resources.resx
+++ b/DXApplication1/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="startup550x363.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\startup550x363.png.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="welcome" xml:space="preserve">
+    <value>Azerbaycan</value>
+  </data>
 </root>
